--- a/1.html
+++ b/1.html
@@ -7,6 +7,8 @@
 
 <body>
 <p>我好漂亮  </p>
+<p>姓名：李佳蓁</p>
+<p>學號：B0729071</p>
 <p><img src="3768368.jpg" width="800" height="533" /></p>
 </body>
 </html>
