--- a/Ch02/index.html
+++ b/Ch02/index.html
@@ -46,7 +46,7 @@ body {
 
 <body>
 <div id="apDiv1">Copyrqht &copy;Cute Dosign Studio All rights reserved</div>
-<div id="apDiv2"><a href="main.html"><img src="images/main_logo.jpg" width="405" height="281" alt="進入首頁" /></a></div>
+<div id="apDiv2"><a href="main.html"><img src="images/cute_design_logo.png" width="455" height="312" alt="進入首頁" /></a></div>
 <div id="apDiv3"><a href="main.html"><img src="images/intro.jpg" width="500" height="126" /></a></div>
 \ \\
 </body>
