--- a/ex10-01.html
+++ b/ex10-01.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>PhotoTour 旅遊攝影網 :: 歡迎愛旅遊愛攝影的你 ::</title>
-<link href="ex10-02.css" rel="stylesheet" type="text/css" media="all" />
+<link href="ex10-01.css" rel="stylesheet" type="text/css" media="all" />
 <script src="SpryAssets/SpryEffects.js" type="text/javascript"></script>
 <script type="text/javascript">
 function MM_openBrWindow(theURL,winName,features) { //v2.0
@@ -34,42 +34,51 @@ function MM_effectAppearFade(targetElement, duration, from, to, toggle)
       <div class="sideTitle"><img src="images/menu_title2.gif" width="603" height="65" alt="攝影作品" /></div>
       <div id="contentPhoto">
         <div class="photolist">
-          <p><a href="javascript:;" onmouseover="MM_effectAppearFade(this, 1000, 50, 100, false)"><img src="images/photos/001s.jpg" width="150" height="100" onclick="MM_openBrWindow('images/photos/001.jpg','','width=352,height=530')" border="0" /></a></p>
+          <p><img src="images/photos/001s.jpg" width="150" height="100" onclick="MM_openBrWindow('images/photos/001.jpg','','width=352,height=530')" /></p>
           <p>BlueSky</p>
         </div>
+        <div id="contentPhoto">
         <div class="photolist">
           <p><a href="javascript:;" onmouseover="MM_effectAppearFade(this, 1000, 50, 100, false)"><img src="images/photos/002s.jpg" width="150" height="100" onclick="MM_openBrWindow('images/photos/002.jpg','','width=536,height=362')" border="0" /></a></p>
           <p>三角守護者</p>
         </div>
+        <div id="contentPhoto">
         <div class="photolist">
-          <p><a href="javascript:;" onmouseover="MM_effectAppearFade(this, 1000, 50, 100, false)"><img src="images/photos/003s.jpg" width="150" height="100" border="0" /></a></p>
+          <p><img src="images/photos/003s.jpg" width="150" height="100" /></p>
           <p>生活</p>
         </div>
+        
+        <div id="contentPhoto">
         <div class="photolist">
           <p><a href="javascript:;" onmouseover="MM_effectAppearFade(this, 1000, 50, 100, false)"><img src="images/photos/004s.jpg" width="150" height="100" onclick="MM_openBrWindow('images/photos/004.jpg','','width=536,height=362')" border="0" /></a></p>
           <p>忙碌</p>
         </div>
+        <div id="contentPhoto">
         <div class="photolist">
-          <p><a href="javascript:;" onmouseover="MM_effectAppearFade(this, 1000, 50, 100, false)"><img src="images/photos/005s.jpg" width="150" height="100" border="0" /></a></p>
+          <p><img src="images/photos/005s.jpg" width="150" height="100" /></p>
           <p>擺在眼前的鮮美</p>
         </div>
+        <div id="contentPhoto">
         <div class="photolist">
           <p><a href="javascript:;" onmouseover="MM_effectAppearFade(this, 1000, 50, 100, false)"><img src="images/photos/006s.jpg" width="150" height="100" onclick="MM_openBrWindow('images/photos/006.jpg','','width=536,height=362')" border="0" /></a></p>
           <p>凝望</p>
         </div>
+        <div id="contentPhoto">
         <div class="photolist">
-          <p><a href="javascript:;" onmouseover="MM_effectAppearFade(this, 1000, 50, 100, false)"><img src="images/photos/007s.jpg" width="150" height="100" border="0" /></a></p>
+          <p><img src="images/photos/007s.jpg" width="150" height="100" /></p>
           <p>禪的奧義</p>
         </div>
+        <div id="contentPhoto">
         <div class="photolist">
           <p><a href="javascript:;" onmouseover="MM_effectAppearFade(this, 1000, 50, 100, false)"><img src="images/photos/008s.jpg" width="150" height="100" onclick="MM_openBrWindow('images/photos/008.jpg','','width=536,height=362')" border="0" /></a></p>
           <p>花的姿態</p>
         </div>
+        <div id="contentPhoto">
         <div class="photolist">
-          <p><a href="javascript:;" onmouseover="MM_effectAppearFade(this, 1000, 50, 100, false)"><img src="images/photos/009s.jpg" width="150" height="100" border="0" /></a></p>
+          <p><img src="images/photos/009s.jpg" width="150" height="100" /></p>
           <p>莊嚴</p>
         </div>
-        <br clear="left"/>
+        <br clear="left" />
       </div>
     </div>
   </div>
